fix some jumping when collapsing comments

--- a/frontend/src/Components/CommentComponent.module.scss
+++ b/frontend/src/Components/CommentComponent.module.scss
@@ -112,6 +112,7 @@ $smallShift: 8px;
     margin-left: 8px; // half of [-] icon width
   }
   cursor: pointer;
+  overflow-anchor: none;
 }
 
 .answers {
